[package]
name = "mag"
version = "0.3.0"
description = "Measurement unit conversions (magnitude!)"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/mag"
repository = "https://github.com/DougLau/mag"
readme = "README.md"
keywords = ["units", "measurement", "dimensional-analysis"]
edition = "2018"

[dependencies]

[features]
default = []
